2008-08-04  Esteban Sánchez  <estebans@artica.es>

	* godmode/extensions.php, operation/extensions.php: Added to
	repository. Extensions interface to operation and godmode modes.

	* images/extensions.png: Added to repository. Extensions icon for the
	menu.

2008-08-04  Esteban Sánchez  <estebans@artica.es>

	* AUTHORS: Added myself.

	* include/functions_extensions.php: Added to repository. Implements
	extensions functions. Extensions are some kind of plugins to the
	console to add functionallity in a modular way. More work and
	documentation is needed.

	* godmode/reporting/reporting_builder.php, include/functions.php,
	operation/agentes/networkmap.php, operation/agentes/ver_agente.php:
	Style correction.

	* include/functions_db.php: Added load_lang_file() to load the
	languages file (useful in extensions l10n). Style correction.

	* index.php: Load extensions and call them in cases.

	* godmode/menu.php, operation/menu.php: Style correction, code
	cleanup. Added extension menu and submenus. Use of CSS more efficient.

	* include/config_process.php: Added extensions support.

	* extensions/, extensions/hello.php: Added to repository, extensions
	dir and example.

	* include/functions.php: Style correction.

	* include/styles/op.css: Cleanup and rewritten the CSS hell it was
	before.

2008-08-01  Manuel Arostegui <marostegui@artica.es>

	* include/help/en/help_plugin_definition.php: Language corrections.

2008-07-31  Sancho Lerena <slerena@gmail.com>
	
	* include/help/en/help_plugin_definition.php: New help page for 
	plugin register section.

	* include/javascript/pandora.js: Help window now shows scrollbar.

	* general/pandora_help.php: Better layout for help system.

	* godmode/servers/plugin.php: Fixed position / menu issues and other
	menor bugs in plugin editor.

2008-07-31  Ramon Novoa  <rnovoa@artica.es>

	* include/help/en/help_wmiquery.php,
	  include/help/en/help_wmifield.php,
	  include/help/en/help_wmikey.php: Added to repository. WMI help pages.